--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "vue-multiselect": "^2.1.6",
         "vue-select": "^3.1.0",
         "vue-select2": "^0.2.6",
+        "vue-slicksort": "^1.1.3",
         "vue-sweetalert2": "^1.6.4",
         "vue2-bootstrap-modal": "^0.1.15",
         "vuejs-noty": "^0.1.3",
