--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "vue-slicksort": "^1.1.3",
         "vue-sweetalert2": "^1.6.4",
         "vue2-bootstrap-modal": "^0.1.15",
+        "vuejs-datepicker": "^1.6.2",
         "vuejs-noty": "^0.1.3",
         "vuetable": "^1.5.12",
         "vuetify": "^1.5.14",
