--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "vue-slicksort": "^1.1.3",
         "vue-sweetalert2": "^1.6.4",
         "vue2-bootstrap-modal": "^0.1.15",
+        "vue2-datepicker": "^2.12.0",
         "vuejs-datepicker": "^1.6.2",
         "vuejs-noty": "^0.1.3",
         "vuetable": "^1.5.12",
