--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "customizeUI.activityBar": "bottom",
     "customizeUI.font.monospace": "Consolas",
     "editor.fontLigatures": true,
-    "editor.fontWeight": "500"
+    "editor.fontWeight": "500",
+    "editor.fontSize": 13
 }
