--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "v-select2-component": "^0.3.8",
         "vue-chartjs": "^3.4.2",
         "vue-currency-filter": "^3.4.2",
+        "vue-json-excel": "^0.2.98",
         "vue-moment": "^4.0.0",
         "vue-multiselect": "^2.1.6",
         "vue-select": "^3.1.0",
