proyecto finalizado -ruta

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
-    "/js/app.js": "/js/app.js?id=a7ecdccf3382e685d161",
-    "/css/app.css": "/css/app.css?id=9689612a44f769e3aa30"
+    "/js/manifest.js": "/js/manifest.js?id=01c8731923a46c30aaed",
+    "/js/vendor.js": "/js/vendor.js?id=81ec91609a1f48270390",
+    "/js/app.js": "/js/app.js?id=e68a1e6932433aec1071",
+    "/css/app.css": "/css/app.css?id=03b83e6ef16b508ce391",
+    "/js/login.js": "/js/login.js?id=b0cf58c5bb43c4126b47"
 }
