--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     },
     "dependencies": {
         "admin-lte": "^2.4.10",
+        "axios-progress-bar": "^1.2.0",
         "babel-polyfill": "^6.26.0",
         "chart.js": "^2.8.0",
+        "laravel-vue-pagination": "^2.3.0",
         "moment": "^2.24.0",
         "noty": "^3.2.0-beta",
-        "v-select2-component": "^0.3.8",
+        "v-select2-component": "^0.3.9",
         "vue-chartjs": "^3.4.2",
         "vue-currency-filter": "^3.4.2",
         "vue-json-excel": "^0.2.98",
