--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,7 @@
 {
-    "/js/app.js": "/js/app.js?id=7fe6131bf5c296c54544",
+    "/js/manifest.js": "/js/manifest.js?id=01c8731923a46c30aaed",
+    "/js/vendor.js": "/js/vendor.js?id=81ec91609a1f48270390",
+    "/js/app.js": "/js/app.js?id=4375500ea61511a204ee",
     "/css/app.css": "/css/app.css?id=03b83e6ef16b508ce391",
-    "/js/login.js": "/js/login.js?id=a96ac603fd67e2b2bc95",
-    "/js/manifest.js": "/js/manifest.js?id=844cdbfe9e6b6b56ae8f",
-    "/js/vendor.js": "/js/vendor.js?id=243f639c5bb557c095a9"
+    "/js/login.js": "/js/login.js?id=b0cf58c5bb43c4126b47"
 }
