--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.1.3",
         "caffeinated/shinobi": "^4.0",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "6.*",
+        "laravel/passport": "^8.0",
         "laravel/tinker": "^1.0",
         "nesbot/carbon": "^2.21",
         "tymon/jwt-auth": "^1.0"
