--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "laravel-multimix": "0.0.2",
-        "lodash": "^4.17.5",
+        "lodash": "^4.17.15",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
@@ -40,6 +40,7 @@
         "laravel-vue-pagination": "^2.3.0",
         "moment": "^2.24.0",
         "noty": "^3.2.0-beta",
+        "v-money": "^0.8.1",
         "v-select2-component": "^0.3.9",
         "vue-chartjs": "^3.4.2",
         "vue-currency-filter": "^3.4.2",
